--- a/Datasets/readme.html
+++ b/Datasets/readme.html
@@ -1,1 +1,3 @@
 
+To use the datasets, you have to cite the below paper
+Zhu, Z., Ong, Y.-S., Dash, M.: Markov blanket-embedded genetic algorithm for gene selection. Pattern Recognit. 40, 3236–3248 (2007).
